added inventory, WIP: items
